--- a/example/src/stories/Introduction.stories.mdx
+++ b/example/src/stories/Introduction.stories.mdx
@@ -8,7 +8,7 @@ import Plugin from './assets/plugin.svg';
 import Repo from './assets/repo.svg';
 import StackAlt from './assets/stackalt.svg';
 
-<Meta title="example/introduction" id="introduction" />
+<Meta title='example/introduction' id='introduction' />
 
 <style>{`
   .css-l8z9zc {
@@ -117,85 +117,93 @@ import StackAlt from './assets/stackalt.svg';
 
 `}</style>
 
-# react-drag-layout
+# react-layout
 
-react-drag-layout是一个布局库。
+react-layout 是一个布局库。
 
 支持 [**自适应布局**](https://componentdriven.org) 和 [**固定布局**](https://componentdriven.org) 效果。
 
-<div className="subheading">安装</div>
+<div className='subheading'>安装</div>
 
 ```
-npm install react-drag-layout
+npm install react-layout
 ```
 
-<div className="subheading">效果</div>
+<div className='subheading'>效果</div>
 
-<div className="link-list">
-  <a
-    className="link-item"
-    href="https://storybook.js.org/docs/react/addons/addon-types"
-    target="_blank"
-  >
-    <img src={Plugin} alt="plugin" />
-    <span>
-      <strong>拖拽</strong>
-      drag
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="https://storybook.js.org/docs/react/configure/webpack"
-    target="_blank"
-  >
-    <img src={StackAlt} alt="Build" />
-    <span>
-      <strong>缩放</strong>
-      resize
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="https://storybook.js.org/docs/react/configure/styling-and-css"
-    target="_blank"
-  >
-    <img src={Colors} alt="colors" />
-    <span>
-      <strong>放置</strong>
-      drop
-    </span>
-  </a>
-  <a
-    className="link-item"
-    href="https://storybook.js.org/docs/react/get-started/setup#configure-storybook-for-your-stack"
-    target="_blank"
-  >
-    <img src={Flow} alt="flow" />
-    <span>
-      <strong>嵌套</strong>
-      nested
-    </span>
-  </a>
-  <a className="link-item" href="https://github.com/storybookjs/storybook" target="_blank">
-    <img src={Code} alt="code" />
-    <span>
-      <strong>动态</strong>
-      change
-    </span>
-  </a>
-  <a className="link-item" href="https://discord.gg/storybook" target="_blank">
-    <img src={Comments} alt="comments" />
-    <span>
-      <strong>其他</strong>
-      other
-    </span>
-  </a>
+<div className='link-list'>
+    <a
+        className='link-item'
+        href='https://storybook.js.org/docs/react/addons/addon-types'
+        target='_blank'
+    >
+        <img src={Plugin} alt='plugin' />
+        <span>
+            <strong>拖拽</strong>
+            drag
+        </span>
+    </a>
+    <a
+        className='link-item'
+        href='https://storybook.js.org/docs/react/configure/webpack'
+        target='_blank'
+    >
+        <img src={StackAlt} alt='Build' />
+        <span>
+            <strong>缩放</strong>
+            resize
+        </span>
+    </a>
+    <a
+        className='link-item'
+        href='https://storybook.js.org/docs/react/configure/styling-and-css'
+        target='_blank'
+    >
+        <img src={Colors} alt='colors' />
+        <span>
+            <strong>放置</strong>
+            drop
+        </span>
+    </a>
+    <a
+        className='link-item'
+        href='https://storybook.js.org/docs/react/get-started/setup#configure-storybook-for-your-stack'
+        target='_blank'
+    >
+        <img src={Flow} alt='flow' />
+        <span>
+            <strong>嵌套</strong>
+            nested
+        </span>
+    </a>
+    <a
+        className='link-item'
+        href='https://github.com/storybookjs/storybook'
+        target='_blank'
+    >
+        <img src={Code} alt='code' />
+        <span>
+            <strong>动态</strong>
+            change
+        </span>
+    </a>
+    <a
+        className='link-item'
+        href='https://discord.gg/storybook'
+        target='_blank'
+    >
+        <img src={Comments} alt='comments' />
+        <span>
+            <strong>其他</strong>
+            other
+        </span>
+    </a>
 </div>
 
-<div className="subheading">优势</div>
-<div className="tip-wrapper">
-  <span className="tip">Tip</span>数据控制视图
+<div className='subheading'>优势</div>
+<div className='tip-wrapper'>
+    <span className='tip'>Tip</span>数据控制视图
 </div>
-<div className="tip-wrapper">
- <span className="tip">Tip</span>配置简单
+<div className='tip-wrapper'>
+    <span className='tip'>Tip</span>配置简单
 </div>
