--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -134,7 +134,7 @@ react-layout 是一个布局库。
 <div className='link-list'>
     <a
         className='link-item'
-        href='http://localhost:6006/?path=/docs/static--static'
+        href='https://dpdfe.github.io/react-layout/?path=/story/draggable--draggable'
         target='_blank'
     >
         <img src={Plugin} alt='plugin' />
@@ -145,18 +145,7 @@ react-layout 是一个布局库。
     </a>
     <a
         className='link-item'
-        href='http://localhost:6006/?path=/docs/static--static'
-        target='_blank'
-    >
-        <img src={Plugin} alt='plugin' />
-        <span>
-            <strong>拖拽</strong>
-            drag
-        </span>
-    </a>
-    <a
-        className='link-item'
-        href='http://localhost:6006/?path=/docs/static--static'
+        href='https://dpdfe.github.io/react-layout/?path=/story/layout--layout'
         target='_blank'
     >
         <img src={StackAlt} alt='Build' />
@@ -165,28 +154,44 @@ react-layout 是一个布局库。
             resize
         </span>
     </a>
-    <a className='link-item' href='' target='_blank'>
+    <a
+        className='link-item'
+        href='https://dpdfe.github.io/react-layout/?path=/story/layout--layout'
+        target='_blank'
+    >
         <img src={Colors} alt='colors' />
         <span>
             <strong>放置</strong>
             drop
         </span>
     </a>
-    <a className='link-item' href='' target='_blank'>
+    <a
+        className='link-item'
+        href='https://dpdfe.github.io/react-layout/?path=/story/layout--layout'
+        target='_blank'
+    >
         <img src={Flow} alt='flow' />
         <span>
             <strong>嵌套</strong>
             nested
         </span>
     </a>
-    <a className='link-item' href='' target='_blank'>
+    <a
+        className='link-item'
+        href='https://dpdfe.github.io/react-layout/?path=/story/layout--layout'
+        target='_blank'
+    >
         <img src={Code} alt='code' />
         <span>
             <strong>动态</strong>
             change
         </span>
     </a>
-    <a className='link-item' href='' target='_blank'>
+    <a
+        className='link-item'
+        href='https://dpdfe.github.io/react-layout/?path=/story/layout--layout'
+        target='_blank'
+    >
         <img src={Comments} alt='comments' />
         <span>
             <strong>其他</strong>
